feat: add logic to create vocabulary

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
 <body>
   <div class="container">
     <h1>Memrise</h1>
+
+    <form id="add-vocabulary-form">
+      <input type="text" name="front" placeholder="Front (e.g. hello)" required>
+      <input type="text" name="back" placeholder="Back (e.g. hola)" required>
+      <button type="submit">Add</button>
+    </form>
+
     <table id="vocabulary-table">
       <thead>
         <tr>
