feat: disable training button if nothing's to train

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <div class="actions">
       <button type="button" id="add-vocabulary-btn">Add Vocabulary</button>
-      <button type="button" id="start-training-btn">Start Training</button>
+      <button type="button" id="start-training-btn" disabled>Loading...</button>
     </div>
 
     <table id="vocabulary-table">
