feat: make add vocabulary dialog more intuitive

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
       </label>
       <div class="dialog-actions">
         <button type="button" id="dialog-cancel-btn">Cancel</button>
+        <button type="button" id="dialog-save-add-btn">Save and Add</button>
         <button type="submit" id="dialog-submit-btn">Save</button>
       </div>
     </form>
