feat: add sorting to table

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
     <table id="vocabulary-table" class="table">
       <thead>
         <tr>
-          <th>Word</th>
-          <th>Box</th>
-          <th>Next Review</th>
+          <th data-sort="front" class="sortable">Word</th>
+          <th data-sort="box" class="sortable">Box</th>
+          <th data-sort="next_review" class="sortable">Next Review</th>
           <th width="100"></th>
         </tr>
       </thead>
