refactor: use client side pagination and sorting

--- a/public/index.html
+++ b/public/index.html
@@ -36,23 +36,10 @@
         <button type="button" id="logout-btn" class="button is-secondary is-normal">Sign out</button>
       </div>
     </header>
-
-    <!-- <div class="actions">
-      <button type="button" id="add-vocabulary-btn" class="button is-secondary is-rounded is-icon-only is-large"
-        title="Add vocabulary">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M12 5V19M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-            stroke-linejoin="round" />
-        </svg>
-      </button>
-      <button type="button" id="start-training-btn" disabled class="button is-primary is-normal">Loading...</button>
-    </div> -->
-
     
       <header class="table-header">
         <div class="left">
-          <h1 class="title">Your vocabulary <span class="count">240 words</span></h1>
-          <p class="description">You're making great progress, keep it up!</p>
+          <h1 class="title">Your vocabulary <span class="count" data-target="word-count">240 words</span></h1>
         </div>
 
         <button type="button" id="add-vocabulary-btn" class="button is-secondary is-normal">
