feat: add app logo

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
 <body>
   <main class="container">
     <header class="app-header">
-      <h1>Recur</h1>
+      <img src="/images/logo.svg" alt="Recur" width="32" height="32">
+
       <div class="user-menu">
         <span id="user-name" class="user-name"></span>
         <div id="language-switcher" class="language-switcher">
@@ -39,7 +40,7 @@
     
       <header class="table-header">
         <div class="left">
-          <h1 class="title">Your vocabulary <span class="count" data-target="word-count">240 words</span></h1>
+          <h1 class="title">Your vocabulary <span class="count" data-target="word-count"></span></h1>
         </div>
 
         <button type="button" id="add-vocabulary-btn" class="button is-secondary is-normal">
