--- a/public/register.html
+++ b/public/register.html
@@ -22,6 +22,8 @@
 <body>
   <div class="auth-container">
     <div class="auth-card">
+      <img src="/images/logo.svg" alt="Recur" width="48" height="48">
+      
       <h1>Create account</h1>
       <p class="auth-subtitle">Start your learning journey</p>
 
