--- a/public/login.html
+++ b/public/login.html
@@ -22,6 +22,8 @@
 <body>
   <div class="auth-container">
     <div class="auth-card">
+      <img src="/images/logo.svg" alt="Recur" width="48" height="48">
+
       <h1>Welcome back</h1>
       <p class="auth-subtitle">Sign in to continue learning</p>
 
