feat: add favicons

--- a/public/register.html
+++ b/public/register.html
@@ -4,7 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Register - Recur</title>
+  
+  <link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -22,7 +30,7 @@
 <body>
   <div class="auth-container">
     <div class="auth-card">
-      <img src="/images/logo.svg" alt="Recur" width="48" height="48">
+      <img src="/icons/logo.svg" alt="Recur" width="48" height="48">
       
       <h1>Create account</h1>
       <p class="auth-subtitle">Start your learning journey</p>
