--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <div class="user-menu">
         <span id="user-name" class="user-name"></span>
         <div id="language-switcher" class="language-switcher">
-          <select id="language-dropdown" class="language-dropdown">
+          <select id="language-dropdown" class="form-control">
             <option id="add-language-option" value="add-new">+ Add language</option>
           </select>
         </div>
@@ -85,7 +85,7 @@
           Per page:
         </label>
 
-        <select id="pagination-limit" class="input">
+        <select id="pagination-limit" class="form-control">
           <option value="10">10</option>
           <option value="25">25</option>
           <option value="50" selected>50</option>
@@ -101,14 +101,17 @@
     <form id="vocabulary-form" method="dialog">
       <h2 id="dialog-title">Add Vocabulary</h2>
       <input type="hidden" name="id">
-      <label>
-        Front
-        <input type="text" name="front" class="input" placeholder="e.g. hello" required>
-      </label>
-      <label>
-        Back
-        <input type="text" name="back" class="input" placeholder="e.g. hola" required>
-      </label>
+
+      <div class="form-group">
+        <label for="front" class="form-label">Front</label>
+        <input type="text" name="front" id="front" class="form-control" placeholder="e.g. hello" required>
+      </div>
+
+      <div class="form-group">
+        <label for="back" class="form-label">Back</label>
+        <input type="text" name="back" id="back" class="form-control" placeholder="e.g. hola" required>
+      </div>
+
       <div class="dialog-actions">
         <button type="button" id="dialog-cancel-btn" class="button -secondary">Cancel</button>
         <button type="button" id="dialog-save-add-btn" class="button -secondary">Save and Add</button>
@@ -124,8 +127,10 @@
       <div id="training-card">
         <p id="training-front" class="card-front"></p>
         <form id="training-form">
-          <input type="text" id="training-answer" class="input" placeholder="Type your answer..." autocomplete="off"
-            required>
+          <div class="form-group">
+            <input type="text" id="training-answer" class="form-control" placeholder="Type your answer..." autocomplete="off"
+              required>
+          </div>
           <button type="submit" class="button -primary">Check</button>
         </form>
         <div id="training-result" hidden>
@@ -150,11 +155,12 @@
   <dialog id="language-dialog">
     <form id="language-form" method="dialog">
       <h2>Add Language</h2>
-      <label>
-        Select a language
-        <select id="language-select" class="input" required>
-        </select>
-      </label>
+      
+      <div class="form-group">
+        <label for="language-select" class="form-label">Select a language</label>
+        <select id="language-select" class="form-control" required></select>
+      </div>
+
       <div class="dialog-actions">
         <button type="button" id="language-dialog-cancel" class="button -secondary">Cancel</button>
         <button type="submit" class="button -primary">Add</button>
