--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/css/icons.css">
     <link rel="stylesheet" href="/css/tables.css">
     <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/dropdowns.css">
     <link rel="stylesheet" href="/css/training.css">
   </head>
 
@@ -33,15 +34,45 @@
     <main class="container">
       <header class="app-header">
         <img src="/icons/logo.svg" alt="Recur" width="32" height="32">
+        
+        <div id="language-switcher" class="language-switcher">
+          <select id="language-dropdown" class="form-control">
+            <option id="add-language-option" value="add-new">+ Add language</option>
+          </select>
+        </div>
 
-        <div class="user-menu">
-          <span id="user-name" class="user-name"></span>
-          <div id="language-switcher" class="language-switcher">
-            <select id="language-dropdown" class="form-control">
-              <option id="add-language-option" value="add-new">+ Add language</option>
-            </select>
-          </div>
-          <button type="button" id="logout-btn" class="button -secondary">Sign out</button>
+        <button type="button" aria-label="Open user menu" popovertarget="user-menu" class="avatar" data-testid="user-menu">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M3 20C5.33579 17.5226 8.50702 16 12 16C15.493 16 18.6642 17.5226 21 20M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </button>
+
+        <div id="user-menu" popover class="dropdown">
+          <header class="user-header">
+            <p class="user-name" data-target="user-name"></p>
+            <p class="user-email" data-target="user-email"></p>
+          </header>
+
+          <hr class="separator" />
+
+          <button type="button" class="item" data-action="logout">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M16 17L21 12M21 12L16 7M21 12H9M9 3H7.8C6.11984 3 5.27976 3 4.63803 3.32698C4.07354 3.6146 3.6146 4.07354 3.32698 4.63803C3 5.27976 3 6.11984 3 7.8V16.2C3 17.8802 3 18.7202 3.32698 19.362C3.6146 19.9265 4.07354 20.3854 4.63803 20.673C5.27976 21 6.11984 21 7.8 21H9"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            Log out
+          </button>
         </div>
       </header>
       
