--- a/public/login.html
+++ b/public/login.html
@@ -39,7 +39,7 @@
 
           <div class="form-group">
             <label for="email" class="form-label">Email</label>
-            <input type="email" name="email" class="form-control" placeholder="you@example.com" required autocomplete="email">
+            <input type="email" name="email" id="email" class="form-control" placeholder="you@example.com" required autocomplete="email">
           </div>
 
           <div class="form-group">
