refactor: split language flags into dedicated files

--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,7 @@
         </button>
 
         <button type="button" data-target="language-dropdown-trigger" commandfor="language-menu" command="toggle-popover" class="language-trigger" hidden aria-label="Open your languages">
-          <svg width="36" height="36">
-            <use href="" data-target="language-flag" />
-          </svg>
+          <img src="" data-target="language-flag" width="36" height="36" alt="" />
         </button>
 
         <div id="language-menu" popover class="dropdown" data-target="language-menu">
